# crypto-rust-tools

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md  SECURITY.md  flake.nix  test_final_kiss_summary.sh  test_frost_updates.sh  test_identifier_update.sh  test_kiss_simplification.sh  test_session_id_rename.sh
.agentic-tools-mcp/memories/agentic_system/: Agentic_MPC_Wallet_Development_System_Setup.json
.agentic-tools-mcp/memories/implementation_analysis/: Load_Wallet_Implementation_Analysis.json
.agentic-tools-mcp/memories/project_implementation/: FROST_MPC_CLI_Keystore_Load_Wallet_Implementation.json
.agentic-tools-mcp/memories/project_overview/: FROST_MPC_Project_Overview.json
.agentic-tools-mcp/tasks/: tasks.json
.claude/: settings.local.json
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml
demo/: demo.tape
docs/: dapp-bridge-design.md
frost-mpc-cli-node/: Cargo.toml  keystore_user_manual.md  signal_protocol.md
frost-mpc-cli-node/docs/: index.md
frost-mpc-cli-node/docs/architecture/: keystore_architecture.md
frost-mpc-cli-node/docs/user_guides/: 02_keystore_overview.md  cli_usage.md
frost-mpc-cli-node/src/: cli_node.rs  keystore.rs  lib.rs
frost-mpc-cli-node/src/handlers/: dkg_commands.rs  extension_commands.rs  keystore_commands.rs  mesh_commands.rs  mod.rs  network_test.rs  send_commands.rs  session_commands.rs  signing_commands.rs  signing_commands_test.rs
frost-mpc-cli-node/src/keystore/: encryption.rs  extension_compat.rs  mod.rs  models.rs  storage.rs  storage_test.rs
frost-mpc-cli-node/src/network/: webrtc.rs  webrtc_test.rs  websocket.rs
frost-mpc-cli-node/src/protocal/: dkg.rs  dkg_test.rs  signal.rs
frost-mpc-cli-node/src/ui/: tui.rs
frost-mpc-cli-node/src/utils/: device.rs  negotiation.rs  state.rs
frost-mpc-cli-node/tests/: integration_test.rs
frost-mpc-webrtc-node/: Cargo.toml
frost-mpc-webrtc-node/src/: main.rs
frost-mpc-webrtc-node/src/net/: websocket.rs
integration/: README.md
integration/native-messaging/: com.yubiwallet.host.json  install.sh
integration/ts-client/: example.ts  host-client.ts  types.ts
integration/wasm-usage/: build.sh  example.ts
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  solution.md  systemPatterns.md
sol-yubikey-signer/: Cargo.toml  README.md
sol-yubikey-signer/src/: main.rs
solnana-mpc-frost/: Cargo.toml  cli_usage.md  group_pubkey_pkg.txt  signal_protocol.md
solnana-mpc-frost/examples/: dkg.rs  solana_dkg.rs
solnana-mpc-frost/src/: cli_node.rs  lib.rs
solnana-mpc-frost/src/handlers/: dkg_commands.rs  mesh_commands.rs  mod.rs  session_commands.rs  signing_commands.rs
solnana-mpc-frost/src/network/: webrtc.rs  websocket.rs
solnana-mpc-frost/src/protocal/: dkg.rs  signal.rs
solnana-mpc-frost/src/ui/: tui.rs
solnana-mpc-frost/src/utils/: ed25519_dkg.rs  mod.rs  negotiation.rs  peer.rs  state.rs
solnana_mpc_frost/: Cargo.toml  cli_usage.md  keys.txt  signal_protocol.md
solnana_mpc_frost/examples/: ed25519_dkg.rs  eth_dkg.rs  mpc.rs  secp256k1_dkg.rs  solana_dkg.rs
solnana_mpc_frost/src/: cli_node.rs  lib.rs  main.rs  negotiation.rs  peer.rs  signal.rs  signal_server.rs  state.rs  tui.rs
solnana_mpc_frost/src/ui/: tui.rs
solnana_mpc_frost/src/utils/: ed25519_dkg.rs  mod.rs  negotiation.rs  peer.rs  signal.rs  state.rs
src/: extension_compat.rs
ssh-to-solana/: Cargo.toml
ssh-to-solana/src/: main.rs
ssh_to_solana/: Cargo.toml  README.md
webrtc-signal-server/: Cargo.toml  README.md
webrtc-signal-server-cloudflare-worker/: Cargo.toml  README.md  wrangler.toml
webrtc-signal-server-cloudflare-worker/.claude/: settings.local.json
webrtc-signal-server-cloudflare-worker/src/: lib.rs
webrtc-signal-server/src/: lib.rs  main.rs
yubikey-crpyto/: Cargo.toml  README.md
yubikey-crpyto/examples/: btc_sign.rs  ethereum.rs  sol_surfpool.rs  solana.rs  sui_sign.rs
yubikey-crpyto/multichain-tests/: README.md  run-bitcoin.sh  run-solana.sh  run-sui.sh
yubikey-crpyto/src/: error.rs  lib.rs  main.rs  pin.rs
yubikey-ed25519-crpyto/: Cargo.toml
yubikey_ed25519_crpyto/: Cargo.toml  README.md
yubikey_ed25519_crpyto/examples/: main.rs
yubisign/: Cargo.toml  README.md
yubisign/examples/: btc_sign.rs  ethereum.rs  sol_surfpool.rs  solana.rs  sui_sign.rs
yubisign/multichain-tests/: README.md  run-backup.sh  run-bitcoin.sh  run-solana.sh  run-sui.sh
yubisign/src/: account.rs  apdu.rs  eth.rs  main.rs  openpgp.rs
yubiwallet/: Cargo.toml  README.md
yubiwallet-host/: Cargo.toml
yubiwallet-host/src/: main.rs
yubiwallet-wasm/: Cargo.toml  README.md
yubiwallet-wasm/src/: lib.rs
yubiwallet/examples/: btc_sign.rs  ethereum.rs  sol_surfpool.rs  sui_sign.rs
yubiwallet/multichain-tests/: README.md  run-backup.sh  run-bitcoin.sh  run-solana.sh  run-sui.sh
yubiwallet/src/: error.rs  eth.rs  lib.rs  main.rs  openpgp.rs  pin.rs  piv.rs
yubiwallet/tests/: chains.rs
