[package]
name = "frost-mpc-cli-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "frost_mpc_cli_node"
path = "src/lib.rs"

[dependencies]
frost-ed25519 = "2.1.0"
frost-secp256k1 = "2.1.0"
frost-core = { version = "2.1.0", features = ["serde"] }
rand = "*"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
bincode = { version = "2.0.1", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
rand_core = "*"
curve25519-dalek = "*"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ratatui = { version = "*", features = ["crossterm"] }
crossterm = { version = "0.29.0" }
anyhow = "*"
url = "*"
webrtc = "*"
lazy_static = "*"
bs58 = "0.5.0"
sha2 = "*"
ethers-core = "*"
ethers-providers = "*"
ethers-signers = "*"
k256 = "*"
elliptic-curve = "*"
clap = { version = "4.5.37", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
webrtc-signal-server = { path = "../webrtc-signal-server" }
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
aes-gcm = "0.10.3"
argon2 = "0.5.2"
dirs = "5.0.1"
base64 = "0.21"
pbkdf2 = "0.12"


[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "cli_node"
path = "src/cli_node.rs"
