[package]
name = "sol-yubikey-signer"
version = "0.1.0"
edition = "2024"
description = "CLI tool to construct Solana transfer transactions and sign them with a YubiKey"

[dependencies]
solana-sdk = "1.16"
solana-client = "1.16"
solana-transaction-status = "1.16"
solana-cli-config = "1.16"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
bs58 = "0.5"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
pcsc = "2.8"
hex = "0.4"
thiserror = "1.0"
rpassword = "7.0"
bincode = "1.3.3"
sha2 = "0.10"
simple_asn1 = "0.6"
