[package]
name = "solnana_mpc_frost"
version = "0.1.0"
edition = "2024"

[dependencies]
frost-ed25519 = "2.1.0"
frost-core = "2.1.0"
rand = "*"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
bincode = { version = "*", features = ["serde"] }
hex = "*"
rand_core = "*"
curve25519-dalek = "*"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ratatui = { version = "*", features = ["crossterm"] }
crossterm = { version = "0.29.0" }
anyhow = "*"
url = "*"
webrtc = "*"
lazy_static = "*"

[[bin]]
name = "signal_server"
path = "src/signal_server.rs"

[[bin]]
name = "cli_node"
path = "src/cli_node.rs"
