[package]
name = "solnana_mpc_frost"
version = "0.1.0"
edition = "2024"

[dependencies]
frost-ed25519 = "2.1.0"
frost-secp256k1 = "2.1.0"
frost-core = { version = "2.1.0", features = ["serde"] }
rand = "0.8"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
bincode = { version = "*", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
rand_core = "*"
curve25519-dalek = "*"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ratatui = { version = "*", features = ["crossterm"] }
crossterm = { version = "0.29.0" }
anyhow = "*"
url = "*"
webrtc = "*"
lazy_static = "*"
bs58 = "0.5.0"
sha2 = "*"

[[bin]]
name = "signal_server"
path = "src/signal_server.rs"

[[bin]]
name = "cli_node"
path = "src/cli_node.rs"

[[example]]
name = "ed25519_dkg"
path = "examples/ed25519_dkg.rs"

[[example]]
name = "secp256k1_dkg"
path = "examples/secp256k1_dkg.rs"
