[package]
name = "webrtc-signal-server-cloudflare-worker"
version = "0.1.0"
edition = "2024"
authors = ["xiongchenyu <xiongchenyu6@gmail.com>"]
description = "General WebRTC signal server For Peer to Peer Communication"
repository = "https://github.com/stars-labs/cypto-rust-tools"
license = "MIT OR Apache-2.0"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
futures = "*"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
