[package]
name = "yubikey_ed25519_crpyto"
version = "0.1.2"
edition = "2024"
authors = ["xiongchenyu6@gmail.com>"]
description = "YubiKey OpenPGP card signing for Ed25519 based crypto signatures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stars-labs/yubikey-ed25519-crypto"
keywords = ["yubikey", "openpgp", "signing", "hardware", "crypto"]
categories = ["cryptography", "authentication", "hardware-support"]

[lib]
name = "yubikey_ed25519_crpyto"
path = "src/lib.rs"

[dependencies]
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-transaction-status = "2.2.7"
solana-cli-config = "2.2.7"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
bs58 = "0.5"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
pcsc = "2"
hex = "0.4"
thiserror = "1.0"
rpassword = "7.0"
bincode = "1.3.3"
sha2 = "0.10"
simple_asn1 = "0.6"
