[package]
name = "yubisign"
version = "0.3.0"
edition = "2024"
authors = ["xiongchenyu6@gmail.com>"]
description = "Seedless multi-chain hardware wallet on a YubiKey — sign Solana, Ethereum, Sui and Bitcoin with keys that never leave the device"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stars-labs/yubisign"
keywords = ["yubikey", "solana", "ethereum", "signing", "hardware"]
categories = ["cryptography", "authentication", "hardware-support"]

[lib]
name = "yubisign"
path = "src/lib.rs"

[dependencies]
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-transaction-status = "2.2.7"
solana-cli-config = "2.2.7"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
bs58 = "0.5.1"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
pcsc = "2.7.0"
hex = "0.4"
thiserror = "1.0"
rpassword = "7.0"
bincode = "1.3"
sha2 = "0.10"
simple_asn1 = "0.6"
ethers = { version = "2.0", features = ["legacy"] }
rlp = "0.5"
sha3 = "0.10"
tokio = { version = "1", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }

# Used only by the multi-chain test examples (Sui/Bitcoin signing helpers).
[dev-dependencies]
blake2 = "0.10"
ripemd = "0.2"
bech32 = "0.9"
