[package]
name = "yubiwallet"
version = "0.3.1"
edition = "2024"
authors = ["xiongchenyu6 <xiongchenyu6@gmail.com>"]
description = "Seedless multi-chain hardware wallet on a YubiKey — sign Solana, Ethereum, Sui and Bitcoin with keys that never leave the device"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stars-labs/yubiwallet"
keywords = ["yubikey", "wallet", "solana", "ethereum", "hardware"]
categories = ["cryptography", "authentication", "hardware-support"]
# Shell-based hardware test suite isn't part of the published crate.
exclude = ["multichain-tests/"]

[lib]
name = "yubiwallet"
path = "src/lib.rs"

# The core library + CLI only need PC/SC, crypto and encoding — no blockchain
# SDKs. This keeps the trusted dependency surface small.
[dependencies]
pcsc = "2.7.0"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5.1"
base64 = "0.22"
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"

# Used only by the example signers / hardware test suite. The Solana example is
# SDK-free (std-only JSON-RPC + manual tx) — solana-sdk 4.x is intentionally not
# a dependency (its solana-keypair/five8 combo is broken upstream, and it pulls a
# huge tree). Ethereum uses ethers; Sui/Bitcoin use small encoding crates.
[dev-dependencies]
ethers = { version = "2.0", features = ["legacy"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.11"
blake2 = "0.10"
ripemd = "0.2"
bech32 = "0.11"
